--- a/index.html
+++ b/index.html
@@ -64,5 +64,19 @@
         </div>
       </div>
     </main>
+
+    <footer class="footer">
+      <div class="footer__links">
+        <a href="#">About</a>
+        <a href="#">Advertising</a>
+        <a href="#">Business</a>
+        <a href="#">How Search Works</a>
+      </div>
+      <div class="footer__links">
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="#">Settings</a>
+      </div>
+    </footer>
   </body>
 </html>
