Add github profile img

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             /></a>
           </li>
           <li>
-            <a class="nav__link nav__link_icon" href="#">
+            <a class="nav__link nav__link_icon" href="https://github.com/asadmoosvi/google-homepage">
               <img
                 class="nav__profile"
-                src="https://picsum.photos/200"
+                src="https://avatars.githubusercontent.com/u/43675041?v=4"
                 alt="Profile Picture"
               />
             </a>
