redirect to google search upon form submission

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/css/style.css" type="text/css" />
+    <script src="/src/js/index.js" defer></script>
     <title>Google</title>
   </head>
   <body>
@@ -44,7 +45,7 @@
             <div class="search__mag-icon">
               <img src="/src/assets/icons/search.svg" alt="Search Icon" />
             </div>
-            <input class="search__input" type="text" name="q" id="q" />
+            <input autofocus required class="search__input" type="text" name="q" id="q" />
             <div class="search__mic-icon">
               <img src="/src/assets/icons/mic.svg" alt="Microphone Icon" />
             </div>
