Use relative URLs

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src/css/style.css" type="text/css" />
-    <script src="/src/js/index.js" defer></script>
+    <link rel="stylesheet" href="./src/css/style.css" type="text/css" />
+    <script src="./src/js/index.js" defer></script>
     <title>Google</title>
   </head>
   <body>
@@ -17,7 +17,7 @@
             <a class="nav__link nav__link_icon" href="#"
               ><img
                 class="nav__apps"
-                src="/src/assets/icons/apps.svg"
+                src="./src/assets/icons/apps.svg"
                 alt="Apps"
             /></a>
           </li>
@@ -37,17 +37,17 @@
     <main>
       <div class="search">
         <div class="search__image">
-          <img src="/src/assets/google.png" alt="Google Logo" />
+          <img src="./src/assets/google.png" alt="Google Logo" />
         </div>
 
         <form action="" class="search__form">
           <div class="search__input-box">
             <div class="search__mag-icon">
-              <img src="/src/assets/icons/search.svg" alt="Search Icon" />
+              <img src="./src/assets/icons/search.svg" alt="Search Icon" />
             </div>
             <input autofocus required class="search__input" type="text" name="q" id="q" />
             <div class="search__mic-icon">
-              <img src="/src/assets/icons/mic.svg" alt="Microphone Icon" />
+              <img src="./src/assets/icons/mic.svg" alt="Microphone Icon" />
             </div>
           </div>
           <div class="search__buttons">
