Add anmation on lucky button click

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="search__buttons">
             <button type="submit" class="search__button">Google Search</button>
-            <button type="button" class="search__button">I'm Feeling Lucky</button>
+            <button type="button" class="search__button" id="lucky-button">I'm Feeling Lucky</button>
           </div>
         </form>
 
